# ai-voice-assistant

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  README.md  RELEASE_CHECKLIST.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
scripts/: build.py  setup_dev.py
tests/: __init__.py  test_basic.py
